--- a/app/views/home/discount.html.erb
+++ b/app/views/home/discount.html.erb
@@ -8,7 +8,9 @@
         <li class="list-group-item">скидки на кол-во товаров в корзине</li>
         <li class="list-group-item">от суммы корзины</li>
         <li class="list-group-item">от состава корзины</li>
-        <li class="list-group-item">редактируемое сообщение клиенту о скидке (пример: "Вам осталось ещё 100 руб до скидки 10%")</li>
+        <li class="list-group-item">от катеогрии товара</li>
+        <li class="list-group-item">редактируемое сообщение клиенту о скидке</li>
+        <li class="list-group-item">персональная скидка (в разработке)</li>
     </ol>
     </div>
 </section>
