--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,17 +2,17 @@
   <div class="container">
 
     <!-- About Section Heading -->
-    <div class="text-white display-5 mx-auto text-center text-uppercase mb-5">О приложении</div>
+    <div class="text-white display-5 mx-auto text-center text-uppercase mb-5">О сервисе</div>
     <!-- About Section Content -->
     <div class="row">
-      <div class="col-lg-4 ml-auto">
-        <p class="lead">"MyAppDA" - это простое маркетинговое дополнение для CMS InSales. Оно позволяют добавлять сценарии работы с заказами по разным триггерам. В составе приложения есть разные сервисы. Например: "Избранные товары", "Собщить о поступлении", "Предзаказ", "Брошенная корзина", работа по API с заказом. </p>
+      <div class="col-lg-4 ml-auto p-1">
+        <p class="lead">"MyAppDA" - это простое маркетинговое дополнение для CMS InSales. Оно позволяют добавлять сценарии работы с заказами по разным триггерам. В составе приложения есть разные функции. Например: "Избранные товары", "Собщить о поступлении", "Предзаказ", "Брошенная корзина","Сценарии скидок", работа по API с заказом. </p>
       </div>
-      <div class="col-lg-4 mr-auto">
-        <p class="lead">Использование приложения позволяет Вашим клиентам получить более качественные сервис от интернет-магазина. А вам иметь расширенную информацию для работы с клиентом. Так же мы уже можем автоматизировать работу с заказом. Например, у нас есть "Отмена заказа" при неоплате в течении определенного времени.</p>
+      <div class="col-lg-4 mr-auto p-1">
+        <p class="lead">Использование приложения позволяет Вашим клиентам получить более качественные сервис от интернет-магазина. А вам иметь расширенную информацию для работы с клиентом. Так же мы уже можем автоматизировать работу с заказом. Например, у нас есть "Отмена заказа" при неоплате в течении определенного времени. Или у нас есть индивидуальные скидки при оформлении заказа и др сценарии.</p>
       </div>
-      <div class="col-lg-4 mr-auto">
-        <p class="lead">Наше приложение развивается и мы его дополняем разными отчетами, что позволяет вам находить новые мотивация вашим клиентам для совершения покупок. Так же мы готовы реализовать ваш сценарий работы с клиентом. Ещё у нас есть импорт клиентов в инсалес из файла</p>
+      <div class="col-lg-4 mr-auto p-1">
+        <p class="lead">Наше приложение развивается и мы его дополняем разными отчетами, что позволяет вам находить новые мотивация вашим клиентам для совершения покупок. Уже сейчас вы можете в одном окне видеть информацию по клиенту - от избранных товаров до брошенных корзин. Так же мы готовы реализовать ваш сценарий работы с клиентом. Ещё у нас есть импорт клиентов в инсалес из файла</p>
       </div>
     </div>
   </div>
