--- a/app/views/home/restock.html.erb
+++ b/app/views/home/restock.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5">
-<h1 class="display-4 text-center text-uppercase mt-5 mb-5">Триггеры - Сообщить о поступлении</h1>
+<h1 class="display-4 text-center text-uppercase mt-5 mb-5">Сообщить о поступлении</h1>
 <section class="page-section pt-0">
 <div class="row">
     <div class="display-6 text-center text-uppercase mb-5">Возможности</div>
