--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,11 +1,11 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-signin', data: { turbo: false} }) do |f| %>
 <h2 class="form-signin-heading"><%= t('.sign_up', :default => "Регистрация") %></h2>
   <%= render "devise/shared/error_messages", resource: resource %>
+  <%= f.input_field :name, class: 'form-control' , placeholder: "Ваше Имя"   %>
   <%= f.input_field :email, autofocus: true , class: 'form-control', placeholder: "Email"  %>
   <%= f.input_field :password, class: 'form-control' , placeholder: "Password - (#{@minimum_password_length} characters minimum)"    %>
   <%= f.input_field :password_confirmation, class: 'form-control' , placeholder: "Password confirmation"     %>
-  <%= f.input_field :name, class: 'form-control' , placeholder: "Ваше Имя"   %>
-  <%= f.input_field :subdomain ,  class: 'form-control' , placeholder: "Логин (например - 'myshop')"   %>
+  <%= f.hidden_field :subdomain ,  class: 'form-control' , placeholder: "Логин (например - 'myshop')", value:  "reg#{Time.now.to_i}" %>
   
   <%# START add reCAPTCHA %>
   <%= flash[:recaptcha_error] %>
