--- a/app/views/layouts/_signed.html.erb
+++ b/app/views/layouts/_signed.html.erb
@@ -41,7 +41,9 @@
             </div>
         </main>
         <footer class="footer p-3 sticky-bottom">
-            <div class="text-center">Support: support@example.com</div>
+            <div class="text-center">
+            Поддержка: <a href="mailto:info@myappda.ru">info@myappda.ru</a>
+            </div>
         </footer>
     </div>
  </div>
